# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: comparison_tree.py  diff.py  generate_diff.py  parser.py
gendiff/formats/: form_selector.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_gendiff.py  test_parser.py
tests/fixtures/: expected_json.txt  expected_nested_json.txt
