[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second project on the Hexlet course Python Developer"
authors = ["delvan <<anikeev30@yandex.ru>>"]
readme = "README.md"

packages = [
    { include = "gendiff" }
]


[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pyyaml = "^6.0.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
